src/main/java/syn/and/sem/JazykSyntaxe_PorovnavaciMnoziny.txt
G = (N, T, P ,Start)

N ={Start, DecPart, CodePart, DecList, DecInit,  D, StmtList, Stmt, Assigh, Ifstm, A, ArgList, ElsePart, V,  P, Q, R, K, L ,M }

T = {VAR, BEGIN, END, IF, ELSE, ELIF, ID, NUM, ; , :=, ( , ) , ==. <=, >=, !=, <, >, {, }. +, -, *, /, =}

P:

Start -> DecPart CodePart  			1

DecPart -> VAR ID DecInit; DecPart | eps			2	3

////DecList -> DecInit ; DecPart | eps		4	5

DecInit -> = NUM | ε			6	7

CodePart - > BEGIN D END			8

D -> StmtList					9

StmtList -> Stmt StmtList | ε		10	11

Stmt -> Assigh | Ifstm		12	13

Assigh -> ID A					14

A -> := V ;  | (ArgList)	;			15	16

ArgList -> V | eps				17	18



IfStm -> IF ( P ) { D } ElsePart		19

ElsePart -> ELIF ( P ) { D } ElsePart | ELSE { D } | eps	20	21	22

P  -> V Q V					23

Q -> == | <= | != | >= | < | >			24	25	26	27	28	29

V → RK 					30

R → LM						31

K → +RK | −RK | ε 				32	33	34

L → (V) | ID Param | NUM				35	36	37

Param -> (ArgList) | ε          41  42

M → ∗LM | /LM | ε 				38	39	40



Overeni na LL(1) treti krok kopirovaci



FL(Start) = {$}

FL(Codepart) = {$}

FL(Decpart) = {BEGIN}

////FL(DecList) = {BEGIN}

FL(DecInit) = {;}

FL(D) = {END, } }

FL(Stmt) = {ID,  IF, END, } }

FL(Smtlist) = {END, }  }

FL(Assigh) = {ID,  IF, END, } }

FL(Ifstm) = {ID,  IF, END, } }

FL(ArgList) = { ) }

FL(ElsePart) = {ID,  IF, END, } }

FL(A) = {ID,  IF, END, } }

FL(P) = {  ) }

FL(D) = {  }  }

FL(V) = {;,  ), ==, <=, !=, >=, <, >}

FL(Q) = {(, ID, NUM}

FL(R) = {+ ,  -, ), ==, <=, !=, >=, <, >, ;}

FL(K) = {), ==, <=, !=, >=, <, >, ;}

FL(L) = { * , /,  + ,  -, ), ==, <=, !=, >=, <, >, ;}

FL(M) = {+ ,  -, ), ==, <=, !=, >=, <, >, ;}

FL(Param) = { * , /,  + ,  -, ), ==, <=, !=, >=, <, >, ;}

Porovnavaci mnoziny

A -> b

F(b *  FL(A))



{VAR}	1

{VAR} | {BEGIN}	2	3

////{ID}| {BEGIN}	4	5

{=} | {;}	6	7

{BEGIN} 	8

{ID, IF, END, } }	9

F(StmtList) = {F(Stmt)}

F(Stmt) = {ID, IF}

{ID, IF} | {END, } }	10	11

{ID} | {IF} 	12	13

{ID}	14

{:=} | { ( }	15	16

{(, ID, NUM} | { ) }	17	18

{IF}	19

{ELIF} | {ELSE} | {ID,  IF, END, }}	20	21	22

{(, ID, NUM}	23

{==} | {<=} | {!=} | {>=} | {<} | {>}	24-29

{(, ID NUM}	30

F(R) = {F(L)}

F(L) = { (, ID NUM}

{ (, ID NUM }	31

{+} | {-} | {), ==, <=, !=, >=, <, >, ; } 	32	33	34

{(} | {ID} | {Num}	35	36	37

{(} | { * , /,  + ,  -, ), ==, <=, !=, >=, <, >, ;}     41  42

{*} | {/} | {+ ,  -, ), ==, <=, !=, >=, <, >, ;}	38	39	40



Semanticka pravidla
Start -> DecPart CodePart		{Func.add(“READLINE”, “WRITELINE”)}

DecPart -> VAR ID DecInit; DecPart | ε		{If ID in Sym then error else ID to table Sym; DecInit.id = ID}

DecInit -> = NUM | ε

CodePart - > BEGIN D END

D -> StmtList

StmtList -> Stmt StmtList | ε

Stmt -> Assigh | Ifstm

Assigh -> ID A		{If ID in Sym; A.id = ID else error}

A -> := V ;  | (ArgList)	;	{Id A.id in Sym : A.id.val = V.val; (id ; val) to table Sym; id to table Init} {If A.id in Func Then error; A.val = ArgList.val}

ArgList -> V | ε		{ArgList.val = V.val} {}



IfStm -> IF ( P ) { D } ElsePart	{}

ElsePart -> ELIF ( P ) { D } ElsePart | ELSE { D } | eps

P  -> V Q V	{P.val = V.val Q.operator V.val}

Q -> == | <= | != | >= | < | >	{Q.operator = S_EEQ}...{Q.operator = S_G}

V → RK 					30

R → LM						31

K → +RK | −RK | ε 				32	33	34

L → (V) | ID Param | NUM	{L.val = V.val}	{If ID in Sym && ID in Init then L.val = Sym.getValueFromKey(ID), If id in func : call func with Param.out as args} {L.val = NUM}

Param -> (ArgList) | ε          {Param.out = ArgList.val}

M → ∗LM | /LM | ε 				38	39	40
